changing the main CTA to better

--- a/index_home.html
+++ b/index_home.html
@@ -15,23 +15,23 @@
             <nav id="mobile_menu">
             <h3 id="close">X</h3>
               <ul>
-                <li><a id="mobile_link" href="#">Home</a></li>
+                <li><a id="mobile_link" href="index_form.html">Home</a></li>
                 <li><a id="mobile_link" href="#">Destinations</a></li>
-                <li><a id="mobile_link" href="#">Trip Ideas</a></li>
+                <li><a id="mobile_link" href="index_itinerary.html">Trip Ideas</a></li>
                 <li><a id="mobile_link" href="#">About</a></li>
               </ul>
             </nav>
         <div class="brand" id="brand"><a id="brand" href='index_home.html'>Erin's Travel</a></div>
         <div class="link" ><a href='index.html' id="main_nav">Home</a></div>
         <div class="link"><a href='projects.html'  id="main_nav">Destinations</a></div> 
-        <div class="link" ><a href='projects.html' id="main_nav">Trip Ideas</a></div> 
+        <div class="link" ><a href='index_itinerary.html' id="main_nav">Trip Ideas</a></div> 
         <div class="link"><a href='projects.html' id="main_nav">About</a></div> 
         <div class="link" id="bold_button"><a id="contact" href='index_form.html'>Contact Us</a></div> 
     </nav>
     <div class="hero_content_container">
         <h1>Explore the World with Us</h1>
         <br>
-        <button class="h1_button">Get Started Now</button>
+        <button class="h1_button"><a id="main_CTA"href='index_form.html'>Get Started Now</a></button>
     </div>
     <div class="value_message_container">
         <h2>Why Use Us?</h2>
