updating some links and some copy

--- a/index_form.html
+++ b/index_form.html
@@ -15,16 +15,16 @@
             <nav id="mobile_menu">
             <h3 id="close">X</h3>
               <ul>
-                <li><a id="mobile_link" href="#">Home</a></li>
+                <li><a id="mobile_link" href="index.html">Home</a></li>
                 <li><a id="mobile_link" href="#">Destinations</a></li>
-                <li><a id="mobile_link" href="#">Trip Ideas</a></li>
+                <li><a id="mobile_link" href="index_itinerary.html">Trip Ideas</a></li>
                 <li><a id="mobile_link" href="#">About</a></li>
               </ul>
             </nav>
-        <div class="brand" id="brand"><a id="brand" href='index_home.html'>Erin's Travel</a></div>
+        <div class="brand" id="brand"><a id="brand" href='index.html'>Erin's Travel</a></div>
         <div class="link" ><a href='index.html' id="main_nav">Home</a></div>
         <div class="link"><a href='projects.html'  id="main_nav">Destinations</a></div> 
-        <div class="link" ><a href='projects.html' id="main_nav">Trip Ideas</a></div> 
+        <div class="link" ><a href='index_itinerary.html' id="main_nav">Trip Ideas</a></div> 
         <div class="link"><a href='projects.html' id="main_nav">About</a></div> 
         <div class="link" id="bold_button"><a id="contact" href='index_form.html'>Contact Us</a></div> 
     </nav>
@@ -37,11 +37,11 @@
         <div id="form_row1">
             <div class="item1">
             <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" value="John"><br><br>
+            <input type="text" id="fname" name="fname" value="first name"><br><br>
             </div>
             <div class="item2">
                 <label for="lname">Last name:</label><br>
-                <input type="text" id="fname" name="fname" value="John"><br><br>
+                <input type="text" id="fname" name="fname" value="last name"><br><br>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
 </div>
     <div id="form_row3">
         <div class="item5">
-        <label for="lname">Tell us more about what your thinking of</label><br>
+        <label for="lname">Tell us more about what your thinking of:</label><br>
         <textarea id="detail" name="detail" value="detail"></textarea><br><br>
         </div>
     </div>
