--- a/index_itinerary.html
+++ b/index_itinerary.html
@@ -15,22 +15,23 @@
             <nav id="mobile_menu">
             <h3 id="close">X</h3>
               <ul>
-                <li><a id="mobile_link" href="#">Home</a></li>
+                <li><a id="mobile_link" href="index.html">Home</a></li>
                 <li><a id="mobile_link" href="#">Destinations</a></li>
-                <li><a id="mobile_link" href="#">Trip Ideas</a></li>
+                <li><a id="mobile_link" href="index_form.html">Trip Ideas</a></li>
                 <li><a id="mobile_link" href="#">About</a></li>
               </ul>
             </nav>
-        <div class="brand" id="brand"><a id="brand" href='index_home.html'>Erin's Travel</a></div>
+        <div class="brand" id="brand"><a id="brand" href='index.html'>Erin's Travel</a></div>
         <div class="link" ><a href='index.html' id="main_nav">Home</a></div>
         <div class="link"><a href='projects.html'  id="main_nav">Destinations</a></div> 
-        <div class="link" ><a href='projects.html' id="main_nav">Trip Ideas</a></div> 
+        <div class="link" ><a href='index_itinerary.html' id="main_nav">Trip Ideas</a></div> 
         <div class="link"><a href='projects.html' id="main_nav">About</a></div> 
         <div class="link" id="bold_button"><a id="contact" href='index_form.html'>Contact Us</a></div> 
     </nav>
     <br>
     <br>
     <h2>Where will you go next?</h2>
+    <p>Browse our popular trips. Don't see what you are looking for? Not a problem! Contact us for a custom itinerary</p> 
     <div class="top_destination_container">   
     <div class="destination_container_1">
         <div class="card_heading">Peru</div>
