adding filter capability to destination

--- a/index_itinerary.html
+++ b/index_itinerary.html
@@ -32,6 +32,11 @@
     <br>
     <h2>Where will you go next?</h2>
     <p>Browse our popular trips. Don't see what you are looking for? Not a problem! Contact us for a custom itinerary</p> 
+    <div class="filter_container">
+    <button class="card_button" id="filter1"><a id="main_CTA">Romantic</a></button><br><br> <button class="card_button" id="filter2"><a id="main_CTA">Adventure</a></button>
+    </div>
+    <div class="link"><a id="clear">Clear</a></div>
+    <br>
     <div class="top_destination_container">   
     <div class="destination_container_1">
         <div class="card_heading">Peru</div>
@@ -86,5 +91,5 @@
         </div>
         </div> 
 </body>
-<script src="app.js"></script>
+<script src="app2.js"></script>
 </html>
